--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base code</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./frontend/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -13,7 +13,7 @@
     <!-- header section for logo and navigation -->
     <header class="header-section">
         <!-- logo -->
-        <img src="./imgas/iron-welding-business-logo-design-template-434ba1c4668fa1eb34477003618af185_screen.png" alt="logo">
+        <img src="frontend/imgas/iron-welding-business-logo-design-template-434ba1c4668fa1eb34477003618af185_screen.png" alt="logo">
 
         <span onclick="openNav()" id="hamburgerIcon">&#9776;</span>
         <a href="javascript:void(0)" class="closebtn" id="closebtn" onclick="closeNav()">&times;</a>
@@ -34,19 +34,21 @@
         <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./imgas/Welding_142949391.jpg" class="d-block w-100" alt="...">
+                    <img src="frontend/imgas/1536683.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./imgas/R.jfif" class="d-block w-100" alt="...">
+                    <img src="frontend/imgas/R.jfif" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./imgas/1536683.jpg" class="d-block w-100" alt="...">
+                    <img src="frontend/imgas/Welding_142949391.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
+            
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
+
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
