carousel slides added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- header section for logo and navigation -->
     <header class="header-section">
         <!-- logo -->
-        <img src="frontend/imgas/iron-welding-business-logo-design-template-434ba1c4668fa1eb34477003618af185_screen.png" alt="logo">
+        <img src="frontend/imgas/logo.png" alt="logo">
 
         <span onclick="openNav()" id="hamburgerIcon">&#9776;</span>
         <a href="javascript:void(0)" class="closebtn" id="closebtn" onclick="closeNav()">&times;</a>
@@ -32,25 +32,30 @@
     <section class="main-container">
         <!-- carousel slides -->
         <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="frontend/imgas/1536683.jpg" class="d-block w-100" alt="...">
+                    <img src="frontend/imgas/1536643.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="frontend/imgas/R.jfif" class="d-block w-100" alt="...">
+                    <img src="frontend/imgas/2373566.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="frontend/imgas/Welding_142949391.jpg" class="d-block w-100" alt="...">
+                    <img src="frontend/imgas/5380069.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
-            
+
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
 
             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
