--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Base code</title>
     <link rel="stylesheet" href="./frontend/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- header section for logo and navigation -->
@@ -38,15 +41,82 @@
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
             <div class="carousel-inner">
+                <!-- first slide -->
                 <div class="carousel-item active">
                     <img src="frontend/imgas/1536643.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Welcome to [Your Company Name]</h2> 
+                        <h3>Where sparks fly and strong bonds are forged!</h3> 
+                        <p>
+                            Whether you need precision welding or custom metalwork, we’re here to 
+                            <br>
+                            bring your visions to life with expert craftsmanship and unmatched quality. 
+                            <br>
+                            From industrial projects to artistic 
+                            creations, our skilled team is dedicated to delivering 
+                            <br>
+                            results that stand the test of time. 
+                            With [X] years of experience and a commitment 
+                            <br>
+                            to excellence, we turn metal into masterpieces. 
+                            Let's build something incredible 
+                            <br>
+                            together                           
+                            your ideas, our expertise, limitless possibilities!"
+                        </p>
+                    </div>
                 </div>
+                <!-- second slide -->
                 <div class="carousel-item">
                     <img src="frontend/imgas/2373566.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block" style="z-index: 1;">
+                        <h2>Welcome to [Your Company Name]</h2> 
+                        <h3>Where sparks fly and strong bonds are forged!</h3> 
+                        <p>
+                            Whether you need precision welding or custom metalwork, we’re here to 
+                            <br>
+                            bring your visions to life with expert craftsmanship and unmatched quality. 
+                            <br>
+                            From industrial projects to artistic 
+                            creations, our skilled team is dedicated to delivering 
+                            <br>
+                            results that stand the test of time. 
+                            With [X] years of experience and a commitment 
+                            <br>
+                            to excellence, we turn metal into masterpieces. 
+                            Let's build something incredible 
+                            <br>
+                            together                           
+                            your ideas, our expertise, limitless possibilities!"
+                        </p>    
+                    </div>
                 </div>
+                <!-- third slide -->
                 <div class="carousel-item">
                     <img src="frontend/imgas/5380069.jpg" class="d-block w-100" alt="...">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Welcome to [Your Company Name]</h2> 
+                        <h3>Where sparks fly and strong bonds are forged!</h3> 
+                        <p>
+                            Whether you need precision welding or custom metalwork, we’re here to 
+                            <br>
+                            bring your visions to life with expert craftsmanship and unmatched quality. 
+                            <br>
+                            From industrial projects to artistic 
+                            creations, our skilled team is dedicated to delivering 
+                            <br>
+                            results that stand the test of time. 
+                            With [X] years of experience and a commitment 
+                            <br>
+                            to excellence, we turn metal into masterpieces. 
+                            Let's build something incredible 
+                            <br>
+                            together                           
+                            your ideas, our expertise, limitless possibilities!" 
+                        </p>   
+                    </div>
                 </div>
+
             </div>
 
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
