--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         </div>
     </section>
 
-    <script src="/frontend/js/script.js">
+    <script src="https://github.com/Tshepo1000/base_code/blob/main/frontend/js/script.js">
        
     </script>
 </body>
