--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="frontend/images/logo.png" alt="logo">
 
         <span onclick="openNav()" id="hamburgerIcon">&#9776;</span>
-        <a href="javascript:void(0)" class="closebtn" id="closebtn" onclick="closeNav()">&times;</a>
+        <a href="javascript:void(0)" class="closebtn" id="closebtn" onclick="closeNav()">&#x2715;</a>
         <!-- navigation -->
         <nav class="navigation-links" id="myNav">
             <ul class="navigation-list">
