desktop and mobile view complete

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- header section for logo and navigation -->
     <header class="header-section">
         <!-- logo -->
-        <img src="frontend/images/logo.png" alt="logo">
+        <img src="frontend/images/weldcraftlogo.png" alt="logo">
 
         <span onclick="openNav()" id="hamburgerIcon">&#9776;</span>
         <a href="javascript:void(0)" class="closebtn" id="closebtn" onclick="closeNav()">&#x2715;</a>
