responsiveness to be completed

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- css animations -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="frontend/css/animation.css">
+
+    <!-- font awesome icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <!-- header section for logo and navigation -->
@@ -107,16 +110,32 @@
     </section>
 
     <!-- about section -->
-    <section class="aboutUs-container" id="about" style="height: 100vh; background-color: white;">
+    <section class="aboutUs-container" id="about" style="height: 100vh;">
+        <h4 id="aboutUs-header">ABOUT WELDCRAFT</h4>
+
+        <h3 id="aboutUs-subheader">Crafting Strength Through Precision Welding</h3>
         <div class="aboutUs-content-container">
+           
             <!-- a text about the company -->
             <div class="aboutUs-text">
+                <p>
+                    At WeldCraft, we are dedicated to delivering precision and quality in every weld. With years of experience in the welding industry, we specialize in offering top-notch welding solutions for industrial, commercial, and residential projects. Our team of skilled professionals is committed to ensuring durability, safety, and customer satisfaction.
+                </p>
 
+                <ul>
+                    <li><i class="fa-solid fa-arrow-right"></i>Precision and Quality: We deliver exceptional craftsmanship in every weld.</li>
+                    <li><i class="fa-solid fa-arrow-right"></i>Experienced Team: Years of industry experience ensure expert solutions for all projects.</li>
+                    <li><i class="fa-solid fa-arrow-right"></i>Versatile Services: Specialized in industrial, commercial, and residential welding.</li>
+                    <li><i class="fa-solid fa-arrow-right"></i>Custom Fabrication: Tailored solutions to meet your specific needs.</li>
+                    <li><i class="fa-solid fa-arrow-right"></i>Reliable Repairs: Efficient and durable repair work.</li>
+                </ul>
+
+                <p id="aboutUs-text">Whether it’s custom fabrication or repair work, we take pride in our craftsmanship and attention to detail, making us a trusted partner in all welding needs.</p>
             </div>
 
             <!-- product images -->
             <div class="aboutUs-images">
-
+                <img src="frontend/images/photo-1504328345606-18bbc8c9d7d1.jfif" alt="">
             </div>
         </div>
     </section>
