updated about us page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <nav class="navigation-links" id="myNav">
             <ul class="navigation-list">
                 <li><a href="#home" class="nav-link">Home</a></li>
-                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#about" class="nav-link">About Us</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#services" class="nav-link">Services</a></li>
                 <li><a href="#contact" class="nav-link">Contact Us</a></li>
@@ -92,7 +92,7 @@
                             From the first arc to the final finish, WeldCraft is where innovation meets craftsmanship. We specialize in creating robust, reliable structures that stand the test of time. Trust us to deliver exceptional quality, whether you're building from scratch or reinforcing what's already great. Your project deserves the best, and that's exactly what we deliver.
                         </p>  
                          <!-- services us button -->
-                         <button class="animate__animated animate__fadeInUp" id="services-button">Our Services</button>  
+                         <button class="animate__animated animate__fadeInUp" id="services-button" onclick="scrollToServicesSection()">Our Services</button>  
                     </div>
                 </div>
             </div>
@@ -110,33 +110,25 @@
     </section>
 
     <!-- about section -->
-    <section class="aboutUs-container" id="about" data-section="about" style="height: 100vh;">
-        <h4 id="aboutUs-header">ABOUT WELDCRAFT</h4>
+    <section class="aboutUs-container" id="about" data-section="about">
+        <div class="aboutUs-headings">
+            <h4 id="aboutUs-header">WHO WE ARE</h4>
 
-        <h3 id="aboutUs-subheader">Crafting Strength Through Precision Welding</h3>
-        <div class="aboutUs-content-container">
-           
+            <h3 id="aboutUs-subheader">Crafting Strength Through Precision Welding</h3>
+        </div>
+        <div class="aboutUs-content-container">  
             <!-- a text about the company -->
-            <div class="aboutUs-text">
-                <p>
-                    At WeldCraft, we are dedicated to delivering precision and quality in every weld. With years of experience in the welding industry, we specialize in offering top-notch welding solutions for industrial, commercial, and residential projects. Our team of skilled professionals is committed to ensuring durability, safety, and customer satisfaction.
-                </p>
-
-                <ul>
-                    <li><i class="fa-solid fa-arrow-right"></i>Precision and Quality: We deliver exceptional craftsmanship in every weld.</li>
-                    <li><i class="fa-solid fa-arrow-right"></i>Experienced Team: Years of industry experience ensure expert solutions for all projects.</li>
-                    <li><i class="fa-solid fa-arrow-right"></i>Versatile Services: Specialized in industrial, commercial, and residential welding.</li>
-                    <li><i class="fa-solid fa-arrow-right"></i>Custom Fabrication: Tailored solutions to meet your specific needs.</li>
-                    <li><i class="fa-solid fa-arrow-right"></i>Reliable Repairs: Efficient and durable repair work.</li>
-                </ul>
-
-                <p id="aboutUs-text">Whether it’s custom fabrication or repair work, we take pride in our craftsmanship and attention to detail, making us a trusted partner in all welding needs.</p>
-            </div>
-
-            <!-- product images -->
-            <div class="aboutUs-images">
-                <img src="frontend/images/photo-1504328345606-18bbc8c9d7d1.jfif" alt="">
-            </div>
+            <p>
+                At WeldCraft, we are dedicated to delivering precision and quality in every weld. With years of experience in the welding industry, we specialize in offering top-notch welding solutions for industrial, commercial, and residential projects. Our team of skilled professionals is committed to ensuring durability, safety, and customer satisfaction.
+            </p>
+            <ul>
+                <li><i class="fa-solid fa-arrow-right"></i>Precision and Quality: We deliver exceptional craftsmanship in every weld.</li>
+                <li><i class="fa-solid fa-arrow-right"></i>Experienced Team: Years of industry experience ensure expert solutions for all projects.</li>
+                <li><i class="fa-solid fa-arrow-right"></i>Versatile Services: Specialized in industrial, commercial, and residential welding.</li>
+                <li><i class="fa-solid fa-arrow-right"></i>Custom Fabrication: Tailored solutions to meet your specific needs.</li>
+                <li><i class="fa-solid fa-arrow-right"></i>Reliable Repairs: Efficient and durable repair work.</li>
+            </ul>
+            <p id="aboutUs-text">Whether it’s custom fabrication or repair work, we take pride in our craftsmanship and attention to detail, making us a trusted partner in all welding needs.</p>
         </div>
     </section>
 
