--- a/index.html
+++ b/index.html
@@ -111,12 +111,10 @@
 
     <!-- about section -->
     <section class="aboutUs-container" id="about" data-section="about">
-        <div class="aboutUs-headings">
+        <div class="aboutUs-content-container">  
             <h4 id="aboutUs-header">WHO WE ARE</h4>
 
             <h3 id="aboutUs-subheader">Crafting Strength Through Precision Welding</h3>
-        </div>
-        <div class="aboutUs-content-container">  
             <!-- a text about the company -->
             <p>
                 At WeldCraft, we are dedicated to delivering precision and quality in every weld. With years of experience in the welding industry, we specialize in offering top-notch welding solutions for industrial, commercial, and residential projects. Our team of skilled professionals is committed to ensuring durability, safety, and customer satisfaction.
@@ -129,6 +127,12 @@
                 <li><i class="fa-solid fa-arrow-right"></i>Reliable Repairs: Efficient and durable repair work.</li>
             </ul>
             <p id="aboutUs-text">Whether it’s custom fabrication or repair work, we take pride in our craftsmanship and attention to detail, making us a trusted partner in all welding needs.</p>
+        </div>
+
+        <div class="team-images">
+                <h5 style="padding-top: 10px;">Founder</h5>
+                <h5>Thabang Sekete</h5>
+            <img src="/frontend/images/246133010_414145423559333_2074378642551066294_n.jpg" alt="">
         </div>
     </section>
 
