services section complete

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <ul class="navigation-list">
                 <li><a href="#home" class="nav-link">Home</a></li>
                 <li><a href="#about" class="nav-link">About Us</a></li>
-                <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#services" class="nav-link">Services</a></li>
+                <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#contact" class="nav-link">Contact Us</a></li>
             </ul>
         </nav>
@@ -130,26 +130,95 @@
         </div>
 
         <div class="team-images">
-                <h5 style="padding-top: 10px;">Founder</h5>
-                <h5>Thabang Sekete</h5>
             <img src="frontend/images/246133010_414145423559333_2074378642551066294_n.jpg" alt="">
+            <h5 style="padding-top: 10px;">Founder</h5>
+                <h5>Thabang Sekete</h5>
         </div>
     </section>
 
-     <!-- projects section -->
-     <section class="projects-container" id="projects" data-section="projects" style="height: 100vh;">
+    <!-- services section -->
+    <section class="services" id="services" data-section="services">
+        <div class="services-content-container">
+            <h4 id="services-header">Our Services</h4>
+            <h3 id="services-subheader">What we offer to our customers</h3>
 
-     </section>
+            <div class="our-services">
+                <div class="service">
+                    <h6>TIG Welding</h6>
+                    <p>We provide precision TIG welding, delivering clean, high-quality welds on stainless steel, aluminum, and other non-ferrous metals.</p>
+                    <div class="btn_and_icon">
+                        <img src="frontend/images/welding-mask.png" alt="">
+                        <button>Hire Us</button>
+                    </div>
+                </div>
 
-      <!-- services section -->
-      <section class="services" id="services" data-section="services" style="height: 100vh;">
+                <div class="service">
+                    <h6>ARC Welding</h6>
+                    <p>
+                        Our arc welding services are tailored to industrial needs, producing strong, high-performance welds for various metal structures.
+                    </p>
+                    <div class="btn_and_icon">
+                        <img src="frontend/images/welding.png" alt="">
+                        <button>Hire Us</button>
+                    </div>
+                </div>
 
-      </section>
+                <div class="service">
+                    <h6>Aluminum Welding</h6>
+                    <p>
+                        Our skilled welders provide expert aluminum welding for automotive, marine, and aerospace projects, ensuring seamless, high-quality finishes.
+                    </p>
+                    <div class="btn_and_icon">
+                        <img src="frontend/images/welder.png" alt="">
+                        <button>Hire Us</button>
+                    </div>
+                </div>
+
+                <div class="service">
+                    <h6>Plasma Arc Welding</h6>
+                    <p>
+                        We use plasma arc welding for high-precision, thin-metal welding projects, providing superior control and accuracy.
+                    </p>
+                    <div class="btn_and_icon">
+                        <img src="frontend/images/construction-and-tools.png" alt="">
+                        <button>Hire Us</button>
+                    </div>
+                </div>
+
+                <div class="service">
+                    <h6>Stick Welding</h6>
+                    <p>
+                        Our experienced welders use stick welding for robust, durable welds in heavy-duty and repair projects, ideal for outdoor and industrial environments.
+                    </p>
+                    <div class="btn_and_icon">
+                        <img src="frontend/images/power-supply.png" alt="">
+                        <button>Hire Us</button>
+                    </div>
+                </div>
+                
+                <div class="service">
+                    <h6>MIG Welding</h6>
+                    <p>
+                        Our team specializes in fast, versatile MIG welding for steel, aluminum, and stainless steel projects, ensuring strong and reliable welds.
+                    </p>
+                    <div class="btn_and_icon">
+                        <img src="frontend/images/welding (1).png" alt="">
+                        <button>Hire Us</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- projects section -->
+    <section class="projects-container" id="projects" data-section="projects" style="height: 100vh;">
+
+    </section>
 
     <!-- contact us section -->
-     <section class="contactUs-container" id="contact" data-section="contact" style="height: 100vh;">
+    <section class="contactUs-container" id="contact" data-section="contact" style="height: 100vh;">
 
-     </section>
+    </section>
 
     <script src="frontend/js/script.js">
        
