--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
 
             <div class="our-services">
                 <div class="service">
-                    <h6>TIG Welding</h6>
-                    <p>We provide precision TIG welding, delivering clean, high-quality welds on stainless steel, aluminum, and other non-ferrous metals.</p>
+                    <h6>Custom Gates</h6>
+                    <p>Enhance the security and curb appeal of your property with our expertly crafted custom gates. Designed to meet your specific needs, our gates combine strength, style, and durability for both residential and commercial properties.</p>
                     <div class="btn_and_icon">
                         <img src="frontend/images/welding-mask.png" alt="">
                         <button>Hire Us</button>
@@ -153,9 +153,9 @@
                 </div>
 
                 <div class="service">
-                    <h6>ARC Welding</h6>
+                    <h6>Security Burglar Bars</h6>
                     <p>
-                        Our arc welding services are tailored to industrial needs, producing strong, high-performance welds for various metal structures.
+                        Protect your home or business with our premium burglar bars. Designed for maximum strength and durability, our burglar bars offer an additional layer of security without compromising on aesthetics.
                     </p>
                     <div class="btn_and_icon">
                         <img src="frontend/images/welding.png" alt="">
@@ -164,9 +164,9 @@
                 </div>
 
                 <div class="service">
-                    <h6>Aluminum Welding</h6>
+                    <h6>Gate Maintenance & Repairs</h6>
                     <p>
-                        Our skilled welders provide expert aluminum welding for automotive, marine, and aerospace projects, ensuring seamless, high-quality finishes.
+                        Keep your gates functioning optimally with our comprehensive maintenance and repair services. Whether it’s routine inspections or urgent repairs, our skilled technicians are here to ensure your gates remain in top condition.
                     </p>
                     <div class="btn_and_icon">
                         <img src="frontend/images/welder.png" alt="">
@@ -175,9 +175,9 @@
                 </div>
 
                 <div class="service">
-                    <h6>Plasma Arc Welding</h6>
+                    <h6>Gate Refurbishments</h6>
                     <p>
-                        We use plasma arc welding for high-precision, thin-metal welding projects, providing superior control and accuracy.
+                        Restore the look and functionality of your old gates with our gate refurbishment services. From repainting and replacing worn-out parts to full structural restorations, we bring gates back to life with expert care.
                     </p>
                     <div class="btn_and_icon">
                         <img src="frontend/images/construction-and-tools.png" alt="">
@@ -186,9 +186,9 @@
                 </div>
 
                 <div class="service">
-                    <h6>Stick Welding</h6>
+                    <h6>Security Burglar Bars Refurbishments</h6>
                     <p>
-                        Our experienced welders use stick welding for robust, durable welds in heavy-duty and repair projects, ideal for outdoor and industrial environments.
+                        Revitalize your existing burglar bars with our professional refurbishment services. We restore, repaint, and reinforce worn or damaged bars to ensure they maintain their strength and appearance, giving you lasting protection without the need for a complete replacement.
                     </p>
                     <div class="btn_and_icon">
                         <img src="frontend/images/power-supply.png" alt="">
