--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
     <!-- header section for logo and navigation -->
     <header class="header-section" id="header">
         <!-- logo -->
-        <img src="frontend/images/weldcraft.png" alt="logo">
+        <img src="frontend/images/weldcraft.png" alt="logo" id="logo">
 
-        <span onclick="openNav()" id="hamburgerIcon">&#9776;</span>
-        <a href="javascript:void(0)" class="closebtn" id="closebtn" onclick="closeNav()">&#x2715;</a>
+        <img src="frontend/images/menu.png" alt="menu-icon" id="menu-icon" onclick="openNav();">
+        <!-- <a href="javascript:void(0)" class="closebtn" id="closebtn" onclick="closeNav()">&#x2715;</a> -->
+         <img src="frontend/images/close.png" alt="close-icon" id="close-icon" onclick="closeNav();">
         <!-- navigation -->
         <nav class="navigation-links" id="myNav">
             <ul class="navigation-list">
@@ -188,8 +189,7 @@
                 <div class="service">
                     <h6>Security Burglar Bars Refurbishments</h6>
                     <p>
-                        Revitalize your existing burglar bars with our professional refurbishment services. We restore, repaint, and reinforce worn or damaged bars to ensure they maintain their strength and appearance, giving you lasting protection without the need for a complete replacement.
-                    </p>
+                        Revitalize your existing burglar bars with our professional refurbishment services. We restore, repaint, and reinforce worn or damaged bars to ensure they maintain their strength and appearance, giving you lasting protection without the need for a complete replacement.                    </p>
                     <div class="btn_and_icon">
                         <img src="frontend/images/power-supply.png" alt="">
                         <button>Hire Us</button>
