mobile view updated

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Base code</title>
     <!-- css -->
     <link rel="stylesheet" href="frontend/css/styles.css">
+    <link rel="stylesheet" href="frontend/css/responsive.css">
 
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
@@ -235,7 +236,6 @@
     </section>
 
     <script src="frontend/js/script.js">
-       
     </script>
 </body>
 </html>
