--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- header section for logo and navigation -->
     <header class="header-section" id="header">
         <!-- logo -->
-        <img src="./frontend/images/Weldcraft.png" alt="logo" id="logo">
+        <img src="frontend/images/Weldcraft.png" alt="logo" id="logo">
 
         <!-- navigation -->
         <nav class="navigation-links" id="myNav">
