--- a/index.html
+++ b/index.html
@@ -112,31 +112,45 @@
     </section>
 
     <!-- about section -->
-    <section class="aboutUs-container" id="about" data-section="about">
-        <div class="aboutUs-content-container">  
-            <h4 id="aboutUs-header" class="animate__animated animate__fadeInDown">WHO WE ARE</h4>
+<section class="aboutUs-container" id="about" data-section="about">
+    <!-- Header Section -->
+    <div class="aboutUs-content-container">  
+        <h4 id="aboutUs-header" class="animate__animated animate__fadeInDown">ABOUT US</h4>
+        <h3 id="aboutUs-subheader" class="animate__animated animate__fadeInDown">Crafting Excellence in Welding Services</h3>
+        <!-- Intro Section -->
+        <p>
+            WeldCraft is a leading provider of high-quality welding services, delivering top-notch solutions for industrial and commercial projects. With a commitment to precision, innovation, and customer satisfaction, we are dedicated to bringing our clients' visions to life through expert craftsmanship.
+        </p>
+    </div>
 
-            <h3 id="aboutUs-subheader"  class="animate__animated animate__fadeInDown">Crafting Strength Through Precision Welding</h3>
-            <!-- a text about the company -->
+    <!-- History & Experience -->
+    <div class="history-container">
+        <div class="history-left">
+            <h4>Our Journey</h4>
             <p>
-                At WeldCraft, we are dedicated to delivering precision and quality in every weld. With years of experience in the welding industry, we specialize in offering top-notch welding solutions for industrial, commercial, and residential projects. Our team of skilled professionals is committed to ensuring durability, safety, and customer satisfaction.
+                WeldCraft was founded in 2018 by Thabang Sekete with the goal of transforming the welding industry through innovation and unparalleled service. Over the years, we have expanded our capabilities, working with a diverse range of industries and completing [X number] of successful projects.
             </p>
-            <ul>
-                <li><i class="fa-solid fa-arrow-right"></i>Precision and Quality: We deliver exceptional craftsmanship in every weld.</li>
-                <li><i class="fa-solid fa-arrow-right"></i>Experienced Team: Years of industry experience ensure expert solutions for all projects.</li>
-                <li><i class="fa-solid fa-arrow-right"></i>Versatile Services: Specialized in industrial, commercial, and residential welding.</li>
-                <li><i class="fa-solid fa-arrow-right"></i>Custom Fabrication: Tailored solutions to meet your specific needs.</li>
-                <li><i class="fa-solid fa-arrow-right"></i>Reliable Repairs: Efficient and durable repair work.</li>
-            </ul>
-            <p id="aboutUs-text">Whether it’s custom fabrication or repair work, we take pride in our craftsmanship and attention to detail, making us a trusted partner in all welding needs.</p>
+        </div>
+        <div class="history-right">
+            <img src="frontend/images/246133010_414145423559333_2074378642551066294_n.jpg" alt="Founder Image">
+            <h5 style="padding-top: 10px;">Thabang Sekete</h5>
+        </div>
+    </div>
+
+    <!-- Mission & Vision Section -->
+    <div class="mission-container">
+        <div class="mission-left">
+            <img src="frontend/images/istockphoto-1359352103-612x612.jpg" alt="">
         </div>
 
-        <div class="team-images">
-            <img src="frontend/images/246133010_414145423559333_2074378642551066294_n.jpg" alt="">
-            <h5 style="padding-top: 10px;">Founder</h5>
-                <h5>Thabang Sekete</h5>
+        <div class="mission-right">
+            <h4>Our Mission</h4>
+            <p>
+                Our mission is to provide superior welding services that meet the highest industry standards, ensuring the success of our clients’ projects.
+            </p>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- services section -->
     <section class="services" id="services" data-section="services">
@@ -198,9 +212,9 @@
                 </div>
                 
                 <div class="service">
-                    <h6>MIG Welding</h6>
+                    <h6>Mobile Welding</h6>
                     <p>
-                        Our team specializes in fast, versatile MIG welding for steel, aluminum, and stainless steel projects, ensuring strong and reliable welds.
+                        Our team specializes in fast, versatile on-site welding services for flexibility and convenience.
                     </p>
                     <div class="btn_and_icon">
                         <img src="frontend/images/welding (1).png" alt="">
@@ -227,7 +241,7 @@
                 </div>
 
                 <div class="project" id="project3">
-                    <img src="frontend/images/142832171_3754835714568429_2152311612956246663_n.jpg" alt="">
+                    <img src="frontend/images/795D8B77-7A4F-48C5-AD18-68C8209CE70D.jpeg" alt="">
                 </div>
             </div>
         </div>
