--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </ul>
         </nav>
 
-        <li class="menu-button" onclick=showMenubar() style="text-decoration: none; list-style-type: none;"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" width="36px" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
-        <li class="close-button" onclick=hideMenubar() style="list-style-type: none; text-decoration: none;"><a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" width="36px" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+        <li class="menu-button" onclick=showMenubar() style="text-decoration: none; list-style-type: none;"><a><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" fill="#e8eaed"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+        <li class="close-button" onclick=hideMenubar() style="list-style-type: none; text-decoration: none;"><a><svg xmlns="http://www.w3.org/2000/svg" height="36px" viewBox="0 -960 960 960" fill="#e8eaed"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
     </header>
 
     <!-- home section -->
@@ -133,7 +133,7 @@
         </div>
         <div class="history-right">
             <img src="frontend/images/246133010_414145423559333_2074378642551066294_n.jpg" alt="Founder Image">
-            <h5 style="padding-top: 10px;">Thabang Sekete</h5>
+            <!-- <h5 style="padding-top: 10px;">Thabang Sekete</h5> -->
         </div>
     </div>
 
