--- a/index.html
+++ b/index.html
@@ -232,24 +232,16 @@
             <h3 id="projects-subheader">Some of our work</h3>
 
             <div class="our-projects">
-                <div class="project" id="project1">
-                    <img src="frontend/images/puertaondas__2_.webp" alt="">
-                </div>
-
-                <div class="project" id="project2">
-                    <img src="frontend/images/142832171_3754835714568429_2152311612956246663_n.jpg" alt="">
-                </div>
-
-                <div class="project" id="project3">
-                    <img src="frontend/images/795D8B77-7A4F-48C5-AD18-68C8209CE70D.jpeg" alt="">
-                </div>
+                <span style="--i: 1"><img src="frontend/images/142832171_3754835714568429_2152311612956246663_n.jpg" alt=""></span>
+                <span style="--i: 2"><img src="frontend/images/puertaondas__2_.webp" alt=""></span>
+                <span style="--i: 3"><img src="frontend/images/795D8B77-7A4F-48C5-AD18-68C8209CE70D.jpeg" alt=""></span>
             </div>
         </div>
     </section>
 
     <!-- contact us section -->
     <section class="contactUs-container" id="contact" data-section="contact" style="height: 100vh;">
-
+        
     </section>
 
     <script src="frontend/js/script.js">
