updated projects section

--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
                 <span style="--i: 1"><img src="frontend/images/142832171_3754835714568429_2152311612956246663_n.jpg" alt=""></span>
                 <span style="--i: 2"><img src="frontend/images/puertaondas__2_.webp" alt=""></span>
                 <span style="--i: 3"><img src="frontend/images/795D8B77-7A4F-48C5-AD18-68C8209CE70D.jpeg" alt=""></span>
+                <span style="--i: 4"><img src="frontend/images/Custom-Gates-1.jpg" alt=""></span>
+                <span style="--i: 5"><img src="frontend/images/SG010.jpg" alt=""></span>
             </div>
         </div>
     </section>
