--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
     <!-- contact us section -->
     <section class="contactUs-container" id="contact" data-section="contact" style="height: 100vh;">
-        
+        <p>To be completed</p>
     </section>
 
     <script src="frontend/js/script.js">
